26/1/2006:	v3.2.9
	- go for 8 bit framebuffer if there are no 16 bit modes (#144742)

23/1/2006:	v3.2.8
	- better monitor detection
	- cjwatson@ubuntu.com: support big-endian cpio archives (#140119)
	- support direct driverupdate loading from CD-ROM (feat #152)
	- add new languages

16/1/2006:	v3.2.7
	- show all options in grub/lilo (#136377)
	- translations & font updated

14/12/2005:	v3.2.6
	- fixed to work correctly with grub & lilo

5/12/2005:	v3.2.5
	- Colin Watson <cjwatson@ubuntu.com>: build fixes for x86-64
	- fixed kernel splash loading
	- include 'unpack_bootlogo' script in package

30/11/2005:	v3.2.4
	- adjust to syslinux 3.11
	- remove some primary words and reimplement them as bytecode
	- read config options from 'gfxboot.cfg'

19/10/2005:	v3.2.3
	- offer Croatian

12/10/2005:	v3.2.2
	- do only aligned dword reads from video memory - some ATI boards
	  need this (#114804)

6/10/2005:	v3.2.1
	- needs syslinux with updated gfx patch
	- texts updated for 10.1
	- implemented filesize, getcwd, chdir commands
	- using new cd layout

15/9/2005:	v3.2.0
	- better testing script
	- gcc 4.1 compile fixes

9/9/2005:	v3.1.8
	- oops, was already December

5/9/2005:	v3.1.7
	- Finnish texts updated

31/8/2005:	v3.1.6
	- fix color handling bug (#72232)
	- show penguins a bit more often

29/8/2005:	v3.1.5
	- added more keymaps (#113265)
	- long menus are wrapped
	- added 640x480 fallback for i845-like boards
	- new translations

24/8/2005:	v3.1.4
	- a different shade of blue
	- fixed penguin theme drawing bug

22/8/2005:	v3.1.3
	- new translations

22/8/2005:	v3.1.2
	- prepare for jpeg decompression to 8-bit color space
	- add penguin theme
	- Dansk keymap added

15/8/2005:	v3.1.1
	- fixed Dansk locale (#104084)
	- new translations added

5/8/2005:	v3.1.0
	- support images with alpha channel
	- new theme

27/7/2005:	v3.0.23
	- texts updated

23/6/2005:	v3.0.22
	- 32 bit modes now fully supported

22/6/2005:	v3.0.21
	- updated documentation

26/4/2005:	v3.0.20